--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@
 ServUO.1.0.0.nupkg
 Application/Properties/PublishProfiles/FolderProfile.pubxml
 Application/Properties/PublishProfiles/FolderProfile.pubxml.user
+.DS_Store
